# AM-front

./: db.sqlite3  pyproject.toml
app/authentication/: urls.py  views.py
app/authentication/templates/: auth_login_basic.html  auth_register_basic.html
app/dashboards/: apps.py  urls.py
app/dashboards/templates/: dashboard_analytics.html
app/extended_ui/: apps.py
app/form_layouts/: apps.py
app/icons/: apps.py
app/layouts/: apps.py
app/tables/: apps.py
app/ui/: apps.py
core/: settings.py  template.py  urls.py
src/scss/: theme-default.scss
templates/layout/partials/menu/vertical/: vertical_menu.html
templates/layout/partials/navbar/: navbar.html
templates/partials/: logo.html
