[tool.poetry]
name = "adb"
version = "0.1.0"
description = "App front end"
authors = ["Mateo Osorio Higuita"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
